--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     repositories {
         google()
+        maven { url 'https://maven.google.com' }
         mavenCentral()
     }
     dependencies {
